<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main_constraintlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBackground">

<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--        android:id="@+id/car_statistics_screen_button"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->

<!--        android:layout_margin="16dp"-->
<!--        android:contentDescription="@string/car_statistics_screen_button_description"-->

<!--        app:fabCustomSize="48dp"-->
<!--        app:maxImageSize="24dp"-->

<!--        android:src="@drawable/ic_baseline_assignment_24"-->

<!--        android:tint="@android:color/white"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--         />-->

    <ImageView
        android:id="@+id/parking_symbol"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        app:srcCompat="@drawable/p_incircle_v2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/parking_symbol_description" />

    <!--
    <ImageView
        android:id="@+id/reverse_symbol"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        app:srcCompat="@drawable/reverse_symbol"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/reverse_symbol_description" />
    -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="5dp"
        >

        <com.sdsmdg.harjot.vectormaster.VectorMasterView
            android:id="@+id/vectorBattery_line"
            android:layout_width="220dp"
            android:layout_height="15dp"
            android:layout_centerHorizontal="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:vector_src="@drawable/vector_line_battery" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <TextView
                android:id="@+id/information_battery"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/temp_battery_value"
                android:gravity="center"
                android:textSize="10sp"
                android:textColor="@color/white"/>

            <ImageView
                android:id="@+id/information_battery_symbol"
                android:rotation="90"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:gravity="center"
                app:srcCompat="@drawable/ic_baseline_battery_charging_full_24"
                app:tint="@color/white" />

        </LinearLayout>



    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/gear_container"
        android:layout_width="40dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        app:srcCompat="@drawable/reverse_symbol"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/reverse_symbol_description"
        android:background="@drawable/border"
        >

        <TextView
            android:id="@+id/information_gear"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/white"
            android:text="@string/temp_gear_information"
            android:textSize="32sp"
            android:gravity="center">
        </TextView>

        <TextView
            android:id="@+id/gear_geartext"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/information_gear"
            android:textColor="@color/white"
            android:text="@string/gear_bottom_text"
            android:textSize="12sp"
            android:gravity="center"
            >
        </TextView>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/testing_image_car"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_marginTop="30dp"
                android:layout_weight=".20"
                android:contentDescription="@string/car_image_description"
                app:srcCompat="@drawable/car_grey_simple" />

            <!--  android:rotation=""-->

            <com.sdsmdg.harjot.vectormaster.VectorMasterView
                android:id="@+id/distance_vector"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_weight=".90"
                android:rotation="180"
                app:vector_src="@drawable/vector_bigone_8step_v2" />

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>